get deployments working + update readme

--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "serverless-python-requirements": "^6.0.0"
   },
   "scripts": {
-    "start": "cross-env env=dev poetry run python manage.py runserver",
-    "start:local": "cross-env env=local poetry run python manage.py runserver",
+    "start": "cross-env env=local poetry run python manage.py runserver",
+    "start:dev": "cross-env env=dev poetry run python manage.py runserver",
     "start:prod": "cross-env env=prod poetry run python manage.py runserver",
     "test": "poetry run pytest",
     "lint": "black .",
     "deploy": "npm install && cross-env env=dev python -m scripts.generate_serverless_config && cross-env sls deploy --stage=dev",
-    "deploy:prod": "npm install && cross-env env=prod python -m scripts.generate_serverless_config &&  cross-env sls deploy --stage=prod"
+    "deploy:prod": "npm install && cross-env env=prod python -m scripts.generate_serverless_config &&  cross-env sls deploy --stage=prod",
+    "undeploy": "cross-env env=dev sls remove --stage=dev",
+    "undeploy:prod": "cross-env env=prod sls remove --stage=prod"
   },
   "keywords": [],
   "author": "",
