--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ alembic = "^1.11.0"
 psycopg2-binary = "^2.9.6"
 pytest = "^7.3.1"
 httpx = "^0.24.0"
+pytest-env = "^0.8.1"
 
 [tool.pyright]
 pythonVersion = "3.9"
@@ -27,3 +28,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+
+
+[tool.pytest.ini_options]
+env = [
+    "env=Test"
+]
